--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -20,11 +20,9 @@
             android:layout_height="30dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:theme="@style/Theme.AppCompat"
+            android:backgroundTint="@color/white"
             android:layout_gravity="center_vertical">
         </Spinner>
-
-
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/question_scroll"
@@ -56,56 +54,80 @@
         android:orientation="horizontal"
         android:id="@+id/row2"
         android:layout_below="@+id/header">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/question_number"
-            android:textSize="15sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="150dp"
-            android:text="Question"/>
 
-        <ImageView
-            android:id="@+id/menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_toStartOf="@id/time_layout"
-            android:layout_marginEnd="10dp"
-            app:srcCompat="@drawable/ic_info_black_24dp"
-            android:layout_gravity="end"
-            android:visibility="visible" />
+            <Button
+                android:id="@+id/btn_qadditional"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:visibility="visible"
+                android:text="Adl info." />
 
-        <LinearLayout
-            android:layout_height="wrap_content"
+
+            <Button
+                android:id="@+id/btn_group_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:scaleType="center"
+                android:layout_toEndOf="@+id/btn_qadditional"
+                android:layout_marginStart="5dp"
+                android:visibility="visible"
+                android:text="Grp Info." />
+
+        <Button
+            android:id="@+id/btn_review_info"
             android:layout_width="wrap_content"
-            android:background="@drawable/spin_bg"
-            android:id="@+id/time_layout"
-            android:layout_marginEnd="5dp"
-            android:layout_alignParentEnd="true">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:scaleType="center"
+            android:layout_toEndOf="@+id/btn_group_info"
+            android:layout_marginStart="5dp"
+            android:visibility="visible"
+            android:text="Rev Info." />
 
             <ImageView
-                android:id="@+id/timer_icon"
-                android:layout_marginStart="10dp"
+                android:id="@+id/menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical|center_horizontal"
-                app:srcCompat="@drawable/ic_timer_black_24dp" />
-
-            <TextView
-                android:id="@+id/timer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="5dp"
+                android:layout_gravity="end"
                 android:layout_marginEnd="10dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:layout_toStartOf="@id/time_layout"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_info_black_24dp" />
 
+            <LinearLayout
+                android:id="@+id/time_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="center"
+                android:layout_marginEnd="5dp">
+
+                <ImageView
+                    android:id="@+id/timer_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    app:srcCompat="@drawable/ic_timer_black_24dp" />
+
+                <TextView
+                    android:id="@+id/timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
     </RelativeLayout>
 
@@ -147,35 +169,6 @@
                     android:background="#000000"
                     android:id="@+id/view" />
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/btn_group_info"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_gravity="center"
-                    android:clickable="true"
-                    android:layout_toStartOf="@id/view"
-                    android:focusable="true"
-                    android:scaleType="center"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_input_24dp" />
-
-
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/btn_qadditional"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_gravity="center"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:scaleType="center"
-                    android:visibility="invisible"
-                    app:srcCompat="@drawable/ic_launch_24dp" />
-
-
             </RelativeLayout>
 
         </ScrollView>
@@ -215,10 +208,13 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:background="@drawable/test_navigation_custom"
-            android:textColor="@drawable/test_navigation_text"
-            android:text="Previous"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:text="Confirm/Back"
             android:layout_marginEnd="5dp"
+            android:drawablePadding="0dp"
+            android:drawableStart="@drawable/ic_arrow_back_24dp"
+            android:paddingEnd="5dp"
             android:id="@+id/prev_btn"/>
 
         <Button
@@ -226,8 +222,8 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:text="Clear Options"
-            android:background="@drawable/test_button_custom"
-            android:textColor="@drawable/test_text_custom"
+            android:background="@drawable/test_navigation_custom"
+            android:textColor="@drawable/test_navigation_text"
             android:layout_marginEnd="5dp"
             android:id="@+id/btn_clear_option"/>
 
@@ -236,9 +232,9 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:text="Mark / Next"
-            android:background="@drawable/test_button_custom"
-            android:textColor="@drawable/test_text_custom"
             android:layout_marginEnd="5dp"
+            android:background="@drawable/test_navigation_custom"
+            android:textColor="@drawable/test_navigation_text"
             android:id="@+id/btn_mark"/>
 
         <Button
@@ -246,9 +242,11 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_weight="1"
-            android:background="@drawable/test_navigation_custom"
-            android:textColor="@drawable/test_navigation_text"
-            android:text="Confirm / Next" />
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:drawableEnd="@drawable/ic_arrow_forward_24dp"
+            android:drawablePadding="0dp"
+            android:text="Confirm/Next" />
 
     </LinearLayout>
 
