--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -47,7 +47,7 @@
                 android:layout_height="35dp"
                 android:textColor="#000000"
                 android:background="@drawable/btn_shape"
-                android:text="resume"/>
+                android:text="Review"/>
 
         </LinearLayout>
 
