--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="white">#ffffff</color>
     <color name="red">#d93843</color>
     <color name="green">#64c47d</color>
+    <color name="dull_yellow">#e0b34a</color>
     <color name="black_overlay">#66000000</color>
 
 </resources>
