--- a/app/src/main/res/drawable/popup_elevation.xml
+++ b/app/src/main/res/drawable/popup_elevation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#708090" />
+    <solid android:color="#8e58d1"
+        />
     <corners android:radius="5dp" />
 </shape>
