--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.digywood.tms.MainActivity">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -39,13 +36,14 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
-                <EditText android:id="@+id/et_email"
+                <EditText
+                    android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
                     android:layout_margin="10dp"
                     android:background="@drawable/custom_edittext"
-                    android:hint="Number" />
+                    android:hint="Number"
+                    android:inputType="number|phone" />
 
                 <!-- Password Label -->
                 <android.support.design.widget.TextInputLayout
@@ -93,6 +91,5 @@
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
