--- a/app/src/main/res/layout/popup_screen.xml
+++ b/app/src/main/res/layout/popup_screen.xml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/popup_element"
-    android:layout_width="@dimen/popup_width"
-    android:layout_height="@dimen/popup_height"
-    android:elevation="5dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/popup_elevation"
-    android:padding="10dp">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginBottom="48dp">
+        android:background="@color/black_overlay"
+        android:id="@+id/llscg"
+        android:padding="10dp">
         <GridView
             android:id="@+id/scroll_grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center|center_horizontal"
-            android:columnWidth="50dp"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:numColumns="auto_fit"
             android:verticalSpacing="24dp"
-            android:horizontalSpacing="10dp"
-            android:stretchMode="spacingWidthUniform">
+            android:horizontalSpacing="2dp"
+            android:stretchMode="spacingWidthUniform"
+            android:columnWidth="45dp">
 
         </GridView>
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/llscg"
         android:orientation="horizontal"
         android:gravity="center_horizontal|bottom">
 
         <Button android:id="@+id/close_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="3sp"
             android:background="@drawable/custom_button"
             android:textColor="#FFFFFF"
-            android:text="Close" />
+            android:text="Close"
+            android:textAlignment="center"/>
     </LinearLayout>
 </RelativeLayout>
