--- a/app/src/main/res/drawable/count_shape.xml
+++ b/app/src/main/res/drawable/count_shape.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="2dp"
+        android:color="#000000"/>
+    <corners android:radius="40dp"></corners>
+    <padding
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp"
+        android:bottom="1dp"/>
+    <solid android:color="#00000000"/>
 
-</selector>
+</shape>
