--- a/app/src/main/res/layout-xlarge/activity_flash_card.xml
+++ b/app/src/main/res/layout-xlarge/activity_flash_card.xml
@@ -5,142 +5,285 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.digywood.tms.TestActivity">
+    android:layout_margin="2dp"
+    tools:context="com.digywood.tms.FlashCardActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="#8e58d1"
         android:id="@+id/header">
+
+        <Spinner
+            android:id="@+id/fl_sections"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/white"
+            android:layout_gravity="center_vertical">
+        </Spinner>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/question_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_toEndOf="@+id/fl_sections"
+            android:layout_toStartOf="@+id/fl_fullscreen"
+            android:orientation="horizontal"
+            android:background="@color/black_overlay"
+            android:alpha="1">
+        </android.support.v7.widget.RecyclerView>
+
+        <ImageView
+            android:id="@+id/fl_fullscreen"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:contentDescription="@string/dummy_content"
+            app:srcCompat="@drawable/ic_fullscreen_black_24dp" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header"
+        android:layout_above="@+id/action_buttons"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5">
 
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="10">
+                android:layout_gravity="start"
+                android:layout_weight="1">
 
-                <Spinner
-                    android:id="@+id/fl_sections"
-                    android:layout_weight="4"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_gravity="center_vertical">
-                </Spinner>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/question_scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_weight="1.5"
-                    android:orientation="horizontal"
-                    android:background="@color/black_overlay"
-                    android:alpha="1">
-                </android.support.v7.widget.RecyclerView>
-
-                <ImageView
-                    android:id="@+id/fl_fullscreen"
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:card="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4.5"
-                    app:srcCompat="@drawable/ic_fullscreen_black_40dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4">
+                    android:background="#FFFFFF"
+                    android:layout_margin="3dp"
+                    android:layout_gravity="center"
+                    card:cardCornerRadius="5dp"
+                    card:cardElevation="5dp"
+                    card:contentPadding="8dp">
 
                     <ImageView
                         android:id="@+id/fl_ivques"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/dummy_content" />
+                        android:adjustViewBounds="true" />
 
-                </LinearLayout>
+                </android.support.v7.widget.CardView>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+            </ScrollView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="5"
+            android:orientation="vertical"
+            android:layout_weight="8.5">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="6">
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textSize="18sp"
+                    android:textStyle="italic|bold"
+                    android:textColor="#8e58d1"
+                    android:text="Attempted"/>
 
+                <TextView
+                    android:id="@+id/tv_attemptcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/count_shape"
+                    android:layout_marginTop="3dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textSize="28sp"
+                    android:padding="5dp"
+                    android:hint="03"/>
 
-                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textSize="18sp"
+                    android:textStyle="italic|bold"
+                    android:textColor="#8e58d1"
+                    android:text="I Know"/>
+
+                <TextView
+                    android:id="@+id/tv_iknowcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/count_shape"
+                    android:layout_marginTop="3dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:padding="5dp"
+                    android:textSize="28sp"
+                    android:hint="04"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textStyle="italic|bold"
+                    android:textColor="#8e58d1"
+                    android:text="I Don't Know"/>
+
+                <TextView
+                    android:id="@+id/tv_idonknowcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/count_shape"
+                    android:layout_marginTop="3dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textSize="28sp"
+                    android:padding="5dp"
+                    android:hint="05"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:textStyle="italic|bold"
+                    android:textColor="#8e58d1"
+                    android:text="Skipped"/>
+
+                <TextView
+                    android:id="@+id/tv_skippedcount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:background="@drawable/count_shape"
+                    android:layout_marginTop="3dp"
+                    android:textSize="28sp"
+                    android:padding="5dp"
+                    android:hint="06"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/margin2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#000000"
-            android:layout_above="@+id/action_buttons" />
+    </LinearLayout>
 
-        <LinearLayout
+    <View
+        android:id="@+id/margin2"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#000000"
+        android:layout_above="@+id/action_buttons" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/action_buttons"
+        android:layout_alignParentBottom="true"
+        android:weightSum="4">
+
+        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/action_buttons"
-            android:layout_alignParentBottom="true"
-            android:weightSum="4">
+            android:layout_weight="1"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:text="Previous"
+            android:layout_marginEnd="5dp"
+            android:id="@+id/btn_prev"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/test_button_custom"
-                android:textColor="@drawable/test_text_custom"
-                android:text="Previous"
-                android:layout_marginEnd="5dp"
-                android:id="@+id/btn_prev"/>
+        <Button
+            android:id="@+id/btn_answer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/test_button_custom"
+            android:text="Show Answer"
+            android:textColor="@drawable/test_text_custom" />
 
-            <Button
-                android:id="@+id/btn_iknow"
-                android:layout_width="145dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/test_button_custom"
-                android:text="I Know"
-                android:textColor="@drawable/test_text_custom" />
+        <Button
+            android:id="@+id/btn_iknow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/test_button_custom"
+            android:text="I Know"
+            android:textColor="@drawable/test_text_custom" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="I Don't Know"
-                android:background="@drawable/test_button_custom"
-                android:textColor="@drawable/test_text_custom"
-                android:layout_marginEnd="5dp"
-                android:id="@+id/btn_idonknow"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="I Don't Know"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:layout_marginEnd="5dp"
+            android:id="@+id/btn_idonknow"/>
 
-            <Button
-                android:id="@+id/btn_next"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/test_button_custom"
-                android:textColor="@drawable/test_text_custom"
-                android:text="Next" />
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/test_button_custom"
+            android:textColor="@drawable/test_text_custom"
+            android:text="Next" />
 
-        </LinearLayout>
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
