--- a/app/src/main/res/layout-large/activity_flash_card.xml
+++ b/app/src/main/res/layout-large/activity_flash_card.xml
@@ -55,7 +55,7 @@
         android:layout_above="@+id/action_buttons"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5">
@@ -64,6 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:layout_margin="5dp"
                 android:layout_weight="1">
 
                 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -87,7 +88,19 @@
 
             </ScrollView>
 
-        </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_fgroupQview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:tint="#000000"
+                android:src="@drawable/gques"/>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
