--- a/app/src/main/res/layout/activity_flash_card.xml
+++ b/app/src/main/res/layout/activity_flash_card.xml
@@ -56,7 +56,7 @@
         android:layout_above="@+id/action_buttons"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5">
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:layout_margin="3dp"
                 android:layout_weight="1">
 
                 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -88,7 +89,20 @@
 
             </ScrollView>
 
-        </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_fgroupQview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:visibility="gone"
+                android:tint="#000000"
+                android:src="@drawable/gques"/>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -213,18 +227,9 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-            </LinearLayout>
-
         </LinearLayout>
 
     </LinearLayout>
-
 
     <View
         android:id="@+id/margin2"
